---
title: DZA - Modèle Conceptuel de Données
author: Dawudesign
---
erDiagram
    User ||--|| Profile : has
    User ||--|| Role : has
    User {
        int id
        string userName
        string password
        timestamp created_at
        timestamp updated_at
    }

    Profile
    Profile {
        int id
        string firstName
        string lastName
        string email
        string phone
        string address
        string city
        string country
        string zipCode
        timestamp created_at
        timestamp updated_at
    }

    Role
    Role {
        int id
        string name
        timestamp created_at
        timestamp updated_at
    }

    Business }|--|{ User : has
    Business }|--|{ Benefit : has
    Business {
        int id
        string name
        string description
        string address
        string city
        string country
        string zipCode
        string phone
        string email
        string website
        string logo
        string siret
        timestamp created_at
        timestamp updated_at
    }

    Benefit ||--|| Category : has
    Benefit {
        int id
        string name
        string image
        String description
        Double price
        int duration
        timestamp created_at
        timestamp updated_at
    }

    Category {
        int id
        string name
        timestamp created_at
        timestamp updated_at
    }

    Appointment ||--|| User : has
    Appointment {
        int id
        Date start_dDate
        Date end_Date
        timestamp created_at
        timestamp updated_at
    }

    TimeSlot ||--|| Appointment : has
    TimeSlot {
        int id
        String start_Time
        String end_Date
        timestamp created_at
        timestamp updated_at
    }

    Booking ||--|| Appointment : has
    Booking ||--|| User : has
    Booking ||--|| Benefit : has
    Booking ||--|| Business : has
    Booking {
        int id
        int CustomerId
        int collaboratorId
        Boolean status
        timestamp created_at
        timestamp updated_at
    }